--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 *.pdf
 Ninja Scrolls.zip
 UserSettings/Layouts/default-2021.dwlt
+references.txt
+UserSettings/Layouts/default-2021.dwlt
